added error message if there is no device

--- a/src/index.html
+++ b/src/index.html
@@ -24,6 +24,7 @@
       <p><strong>Appareil sélectionné :</strong></p>
       <p><span id="device-name">-</span></p>
     </div>
+    <div id="error-message" class="error-message hidden">Erreur dans la recherche de connexion</div>
   </div>
 </body>
 </html>
