Add connect button when device selected

--- a/src/index.html
+++ b/src/index.html
@@ -24,8 +24,11 @@
   <ul id="device-list" class="device-list hidden"></ul>
   
   <div id="selected-device" class="device-info hidden">
-    <p><strong>Appareil sélectionné :</strong></p>
-    <p><span id="device-name">-</span></p>
+    <p>
+      <strong>Appareil sélectionné :</strong>
+      <span id="device-name">-</span>
+    </p>
+    <button id="connect-button" class="connect-button small">Se connecter</button>
   </div>
 
   <div id="error-message" class="error-message hidden">
