--- a/src/index.html
+++ b/src/index.html
@@ -17,12 +17,12 @@
 
   <button id="scan-button" class="scan-button">Rechercher des appareils</button>
 
-  <div id="loading" class="error-message hidden">
-    Chargement...
+  <div id="loading" class="hidden">
+    Chargement<span id="loading-dots"></span>
   </div>
 
   <ul id="device-list" class="device-list hidden"></ul>
-  
+
   <div id="selected-device" class="device-info hidden">
     <p>
       <strong>Appareil sélectionné :</strong>
