Working classes system

--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,8 @@
   <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline'; img-src 'self';">
   <link rel="stylesheet" href="style.css">
   <script defer src="renderer.js"></script>
+  <script defer src="interactions/Actions.js"></script>
+  <script defer src="interactions/Settings.js"></script>
 </head>
 <body>
   <div class="logo-container">
