[+] Add 'settings' button in index.html files

--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,8 @@
 
   <button id="calibrate-button" class="scan-button">Calibrer la caméra</button>
 
+  <a class="button_setting" href="settings.html">Settings</a>
+
   <div id="connection-status" class="device-info">
     <strong>Status :</strong>
     <span id="device-status">Aucun appareil Bluetooth connecté</span>
