[+] Change the path of the settings.html

--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
 
   <button id="calibrate-button" class="scan-button">Calibrer la caméra</button>
 
-  <a class="button_setting" href="settings.html">Settings</a>
+  <a class="button_setting" href="settings/settings.html">Settings</a>
 
   <div id="connection-status" class="device-info">
     <strong>Status :</strong>
